--- a/MainApp/app/src/main/res/layout/fragment_sign_up_customer.xml
+++ b/MainApp/app/src/main/res/layout/fragment_sign_up_customer.xml
@@ -12,7 +12,7 @@
         android:gravity="center">
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/textViewCustomer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Sign Up as Instructor" />
@@ -23,10 +23,10 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name" />
+            android:hint="Name" />
 
         <EditText
-            android:id="@+id/editTextTextEmailAddress2"
+            android:id="@+id/editTextTextEmailAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -42,7 +42,7 @@
             android:hint="Create password"/>
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/buttonSignUpCustomer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Button" />
