--- a/MainApp/app/src/main/res/layout/fragment_sign_up_instructor.xml
+++ b/MainApp/app/src/main/res/layout/fragment_sign_up_instructor.xml
@@ -5,10 +5,60 @@
     android:layout_height="match_parent"
     tools:context=".fragments.SignUpInstructor">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        android:gravity="center">
 
+        <TextView
+            android:id="@+id/textViewInstr1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Sign Up as Customer" />
+
+        <EditText
+            android:id="@+id/editTextTextInstrName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:hint="Name" />
+
+        <EditText
+            android:id="@+id/editTextTextInstrSurname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:hint="Surname" />
+
+        <EditText
+            android:id="@+id/editTextTextInstrID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10" />
+
+        <EditText
+            android:id="@+id/editTextTextInstrEmailAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textEmailAddress"
+            android:hint="Insert email"/>
+
+        <EditText
+            android:id="@+id/editTextTextInstrPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPassword"
+            android:hint="Create password"/>
+
+        <Button
+            android:id="@+id/buttonInstr"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+    </LinearLayout>
 </FrameLayout>
