--- a/MainApp/app/src/main/res/layout/activity_main_customer.xml
+++ b/MainApp/app/src/main/res/layout/activity_main_customer.xml
@@ -6,9 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".activities.MainCustomerActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Customer" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <Spinner
+            android:id="@+id/spinnerPlaces"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
