--- a/MainApp/app/src/main/res/layout/activity_main_customer.xml
+++ b/MainApp/app/src/main/res/layout/activity_main_customer.xml
@@ -9,14 +9,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:orientation="vertical">
 
-        <Spinner
-            android:id="@+id/spinnerPlaces"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerMain"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
