--- a/MainApp/app/src/main/res/layout/fragment_sign_up_instructor.xml
+++ b/MainApp/app/src/main/res/layout/fragment_sign_up_instructor.xml
@@ -39,6 +39,11 @@
             android:layout_height="wrap_content"
             android:ems="10" />
 
+        <Spinner
+            android:id="@+id/signPlaces"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <EditText
             android:id="@+id/editTextTextInstrEmailAddress"
             android:layout_width="wrap_content"
