--- a/MainApp/app/src/main/res/layout/fragment_main_get_instructors.xml
+++ b/MainApp/app/src/main/res/layout/fragment_main_get_instructors.xml
@@ -6,20 +6,23 @@
     tools:context=".fragments.MainGetInstructors">
 
     <!-- TODO: Update blank fragment layout -->
-    <ScrollView
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="back" />
 
         <ListView
             android:id="@+id/instructorList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </ScrollView>
-
-    <TextView
-        android:id="@+id/back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="back" />
+            android:layout_height="match_parent" />
+    </LinearLayout>
 
 </FrameLayout>
