--- a/MainApp/app/src/main/res/layout/activity_main_instructor.xml
+++ b/MainApp/app/src/main/res/layout/activity_main_instructor.xml
@@ -13,63 +13,34 @@
         android:gravity="center">
 
         <TextView
-            android:id="@+id/textView12"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-    <LinearLayout
-        android:id="@+id/layswitch"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
-        <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/textViewName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/textViewPlace"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
 
         <TextView
-        android:id="@+id/textView6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
-
-        <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/textViewBook"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
 
-        <TextView
-        android:id="@+id/textView8"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
-
-        <TextView
-            android:id="@+id/textView9"
+        <LinearLayout
+            android:id="@+id/switchfrag"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <TextView
-        android:id="@+id/textView10"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
-
-        <TextView
-            android:id="@+id/textView11"
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerTimeTable"
+            android:name="com.example.myapp.fragments.TimeTableFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
