--- a/MainApp/app/src/main/res/layout/activity_main_instructor.xml
+++ b/MainApp/app/src/main/res/layout/activity_main_instructor.xml
@@ -15,32 +15,34 @@
         <TextView
             android:id="@+id/textViewName"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/textViewPlace"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/textViewBook"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="Prenota" />
 
         <LinearLayout
             android:id="@+id/switchfrag"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+            <TextView
+                android:id="@+id/textSetDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Set Date" />
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fragmentContainerTimeTable"
-            android:name="com.example.myapp.fragments.TimeTableFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/fragmentContainerTimeTable"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
