--- a/MainApp/app/src/main/res/layout/instructors_list.xml
+++ b/MainApp/app/src/main/res/layout/instructors_list.xml
@@ -31,7 +31,10 @@
             <RatingBar
                 android:id="@+id/ratingInstr"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:isIndicator="true"
+                android:clickable="false"
+                android:focusableInTouchMode="false"/>
         </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
