--- a/MainApp/app/src/main/res/layout/instructors_list.xml
+++ b/MainApp/app/src/main/res/layout/instructors_list.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/ratingInstr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:numStars="5"
                 android:isIndicator="true"
                 android:clickable="false"
                 android:focusableInTouchMode="false"/>
