--- a/MainApp/app/src/main/res/layout/fragment_sign_up_instructor.xml
+++ b/MainApp/app/src/main/res/layout/fragment_sign_up_instructor.xml
@@ -39,10 +39,14 @@
             android:layout_height="wrap_content"
             android:ems="10" />
 
-        <Spinner
-            android:id="@+id/signPlaces"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/search_spinner"
+            android:hint="Dove?"
+            android:drawableEnd="@drawable/ic_arrow"
+            android:background="@android:drawable/editbox_background" />
+
 
         <EditText
             android:id="@+id/editTextTextInstrEmailAddress"
