--- a/MainApp/app/src/main/res/layout/fragment_sign_up_customer.xml
+++ b/MainApp/app/src/main/res/layout/fragment_sign_up_customer.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     tools:context=".fragments.SignUpCustomer">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_gravity="center"
         android:gravity="center">
 
         <TextView
