--- a/MainApp/app/src/main/res/layout/fragment_sign_up_instructor.xml
+++ b/MainApp/app/src/main/res/layout/fragment_sign_up_instructor.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     tools:context=".fragments.SignUpInstructor">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_gravity="center"
         android:gravity="center">
 
         <TextView
@@ -40,12 +42,13 @@
             android:ems="10" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width = "match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/search_spinner"
             android:hint="Dove?"
             android:drawableEnd="@drawable/ic_arrow"
-            android:background="@android:drawable/editbox_background" />
+            android:background="@android:drawable/editbox_background"
+            />
 
 
         <EditText
