--- a/MainApp/app/src/main/res/values/colors.xml
+++ b/MainApp/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#AAAAAA</color>
+    <color name="green">#99CC00</color>
+    <color name="red">#FF4444</color>
+    <color name="light_blue">#33B5E5</color>
+
+
+
 </resources>
