--- a/MainApp/app/src/main/res/layout/bookings_list.xml
+++ b/MainApp/app/src/main/res/layout/bookings_list.xml
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:paddingRight="30dp"/>
+                android:ems="5"/>
 
             <TextView
                 android:id="@+id/isFree"
