targetsdk 31, onbackpresseddispatcher,grafica

--- a/MainApp/app/src/main/res/layout/fragment_main_get_instructors.xml
+++ b/MainApp/app/src/main/res/layout/fragment_main_get_instructors.xml
@@ -11,18 +11,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="back" />
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:padding="20dp">
 
         <ListView
             android:id="@+id/instructorList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="30dp"/>
+
     </LinearLayout>
 
 </FrameLayout>
