--- a/MainApp/app/src/main/res/layout/instructors_list.xml
+++ b/MainApp/app/src/main/res/layout/instructors_list.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints" >
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -20,13 +20,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/nameInstr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="TextView"
+                android:textSize="24dp"
+                android:ems="5"/>
 
             <RatingBar
                 android:id="@+id/ratingInstr"
@@ -37,6 +40,6 @@
                 android:clickable="false"
                 android:focusableInTouchMode="false"/>
         </LinearLayout>
-        </LinearLayout>
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
