--- a/MainApp/app/src/main/res/layout/fragment_main_get_places.xml
+++ b/MainApp/app/src/main/res/layout/fragment_main_get_places.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.MainGetPlaces">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ski_img"
+        android:layout_gravity="center"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -24,6 +33,8 @@
             android:drawableEnd="@drawable/ic_arrow"
             android:hint="Dove?"
             android:padding="10dp" />
+
+
 
         <Button
             android:id="@+id/mainCustomerButton"
