--- a/MainApp/app/src/main/res/layout/fragment_main_cust_instructor.xml
+++ b/MainApp/app/src/main/res/layout/fragment_main_cust_instructor.xml
@@ -59,7 +59,8 @@
             android:id="@+id/ratingBarIst"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:numStars="5" />
+            android:numStars="5"
+            android:theme="@style/RatingBar"/>
 
         <Button
             android:id="@+id/buttonAddRate"
