--- a/MainApp/app/src/main/res/layout/fragment_main_get_places.xml
+++ b/MainApp/app/src/main/res/layout/fragment_main_get_places.xml
@@ -40,7 +40,7 @@
             android:id="@+id/mainCustomerButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:text="Vai!"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"/>
 
