--- a/MainApp/app/src/main/res/values/colors.xml
+++ b/MainApp/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="green">#99CC00</color>
     <color name="red">#FF4444</color>
     <color name="light_blue">#33B5E5</color>
-
+    <color name="gold">#FFD700</color>
 
 
 </resources>
