--- a/MainApp/app/src/main/res/drawable/shape.xml
+++ b/MainApp/app/src/main/res/drawable/shape.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@color/gold" >
+        android:color="@color/white" >
     </solid>
 
     <stroke
