--- a/MainApp/app/src/main/res/layout/fragment_sign_in.xml
+++ b/MainApp/app/src/main/res/layout/fragment_sign_in.xml
@@ -6,42 +6,52 @@
     android:layout_gravity="center"
     tools:context=".fragments.SignIn">
 
-    <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_gravity="center"
         android:gravity="center">
 
-
-        <EditText
-            android:id="@+id/emailAddressSignIn"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textEmailAddress"
-            android:hint="Insert email"/>
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="15dp"
+            android:background="@drawable/shape">
 
-        <EditText
-            android:id="@+id/passwordSignIn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPassword" />
 
-        <Button
-            android:id="@+id/buttonSignIn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
+            <EditText
+                android:id="@+id/emailAddressSignIn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="12"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/toSignUp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:text="Sign Up" />
-    </LinearLayout>
+            <EditText
+                android:id="@+id/passwordSignIn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="12"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:textSize="20sp" />
 
+            <Button
+                android:id="@+id/buttonSignIn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Accedi" />
+
+            <TextView
+                android:id="@+id/toSignUp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                android:text="Registrati"
+                android:layout_marginEnd="2dp"/>
+        </LinearLayout>
+    </RelativeLayout>
 </FrameLayout>
