--- a/MainApp/app/src/main/res/layout/activity_main_instructor.xml
+++ b/MainApp/app/src/main/res/layout/activity_main_instructor.xml
@@ -1,131 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MainInstructorActivity"
-    android:background="@drawable/ski_bk">
-    <RelativeLayout
+    tools:context=".activities.MainInstructorActivity">
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="40dp">
-        <LinearLayout
+        android:orientation="vertical">
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerMainIstr"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="40dp"
-            android:layout_margin="20dp"
-            android:background="@drawable/shape">
+            android:layout_height="wrap_content" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:gravity="center">
-
-                <TextView
-                    android:id="@+id/textViewName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Nome"
-                    android:textSize="30sp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginStart="10dp"/>
-
-                <TextView
-                    android:id="@+id/textViewSurname"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Cognome"
-                    android:textSize="30sp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/textViewPlace"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="Località"
-                android:textStyle="italic"
-                android:gravity="center"
-                android:layout_marginBottom="5dp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/layContainIstr"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:orientation="vertical"
-            android:layout_gravity="bottom"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="40dp"
-            android:layout_margin="20dp"
-            android:gravity="center"
-            android:background="@drawable/shape">
-            <TextView
-                android:id="@+id/textViewBook"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Calendario"
-                android:textStyle="bold"
-                android:layout_marginBottom="25dp"
-                android:textSize="30sp"
-                android:drawableEnd="@drawable/ic_arrow"
-                android:gravity="center"
-                android:layout_gravity="center"/>
-
-            <LinearLayout
-                android:id="@+id/switchfrag"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:visibility="gone">
-
-                <TextView
-                    android:id="@+id/textSetDate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Data"
-                    android:textSize="20dp"
-                    android:gravity="center"/>
-                <androidx.fragment.app.FragmentContainerView
-                    android:id="@+id/fragmentContainerTimeTable"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/textViewYourRate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Valutazioni"
-                android:textStyle="bold"
-                android:textSize="30sp"
-                android:gravity="center"
-                android:layout_gravity="center"
-                android:layout_marginTop="25dp"
-                android:drawableEnd="@drawable/ic_arrow"
-                />
-
-            <LinearLayout
-                android:id="@+id/switchVisIst"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:gravity="center"
-                android:visibility="gone">
-
-                <ListView
-                    android:id="@+id/listRate"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </LinearLayout>
-        </LinearLayout>
-    </RelativeLayout>
-</FrameLayout>
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
