--- a/MainApp/app/src/main/res/layout/fragment_main_cust_instructor.xml
+++ b/MainApp/app/src/main/res/layout/fragment_main_cust_instructor.xml
@@ -3,138 +3,171 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.YourInstructorFragment"
-    android:background="@drawable/ski_bk">
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="30dp"
-    android:layout_marginBottom="40dp">
-    <LinearLayout
+    tools:context=".fragments.YourInstructorFragment">
+    <ImageView
+        android:id="@+id/imageViews"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="40dp"
-        android:layout_margin="20dp"
-        android:background="@drawable/shape">
+        android:layout_height="match_parent"
+        android:padding="0dp"
+        android:src="@drawable/provamain"
+        android:layout_gravity="center"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/textViewNameIstr"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Nome"
-                android:textSize="30sp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"/>
-
-            <TextView
-                android:id="@+id/textViewSurnameIstr"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cognome"
-                android:textSize="30sp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/textViewPlaceIstr"
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="Località"
-            android:textStyle="italic"
-            android:gravity="center"
-            android:layout_marginBottom="5dp"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/layContain"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:orientation="vertical"
-        android:layout_gravity="bottom"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="40dp"
-        android:layout_margin="20dp"
-        android:gravity="center"
-        android:background="@drawable/shape">
-        <TextView
-            android:id="@+id/textViewBookLes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Prenota"
-            android:textStyle="bold"
-            android:layout_marginBottom="25dp"
-            android:textSize="30sp"
-            android:drawableEnd="@drawable/ic_arrow"
-            android:gravity="center"
-            android:layout_gravity="center"/>
-
-        <LinearLayout
-            android:id="@+id/switchfragCust"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="40dp"
+            android:layout_margin="20dp"
+            android:background="@drawable/shape">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/textViewNameIstr"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Nome"
+                    android:textSize="30sp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"/>
+
+                <TextView
+                    android:id="@+id/textViewSurnameIstr"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Cognome"
+                    android:textSize="30sp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    />
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/textSetDateCust"
+                android:id="@+id/textViewPlaceIstr"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Data"
-                android:textSize="20dp"
-                android:gravity="center"/>
-
-            <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/fragmentContainerTimeTableCust"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
+                android:textSize="20sp"
+                android:text="Località"
+                android:textColor="@color/light_blue"
+                android:textStyle="italic"
+                android:gravity="center"
+                android:layout_marginBottom="5dp"/>
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/textViewRateIst"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Valuta"
-            android:textStyle="bold"
-            android:textSize="30sp"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:layout_marginTop="25dp"
-            android:drawableEnd="@drawable/ic_arrow"
-            />
 
         <LinearLayout
-            android:id="@+id/switchVis"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:id="@+id/layContain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="40dp"
+            android:layout_margin="20dp"
             android:gravity="center"
-            android:visibility="gone">
-
-            <RatingBar
-                android:id="@+id/ratingBarIst"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/shape"
+            android:layout_centerHorizontal="true"
+            android:showDividers="middle"
+            android:divider="?android:dividerVertical">
+            <LinearLayout
+                android:id="@+id/layBook"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:numStars="5"
-                android:theme="@style/RatingBar" />
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/textViewBookLes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Prenota"
+                    android:drawableEnd="@drawable/blue_arrow"
+                    android:ems="4"
+                    android:textStyle="bold"
+                    android:layout_margin="20dp"
+                    android:textSize="30sp"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:textColor="@color/light_blue"/>
 
-            <Button
-                android:id="@+id/buttonAddRate"
+                <LinearLayout
+                    android:id="@+id/switchfragCust"
+                    android:layout_width="352dp"
+                    android:layout_height="350dp"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:id="@+id/textSetDateCust"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Data"
+                        android:layout_marginBottom="10dp"
+                        android:drawableEnd="@drawable/ic_arrow"
+                        android:textSize="20dp"
+                        android:gravity="center"
+                        android:layout_gravity="center"/>
+
+                    <androidx.fragment.app.FragmentContainerView
+                        android:id="@+id/fragmentContainerTimeTableCust"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/layRate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:gravity="center"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/textViewRateIst"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Valuta"
+                    android:drawableEnd="@drawable/blue_arrow"
+                    android:textStyle="bold"
+                    android:textSize="30sp"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:ems="4"
+                    android:layout_margin="20dp"
+                    android:textColor="@color/light_blue"
+                    />
+
+                <LinearLayout
+                    android:id="@+id/switchVis"
+                    android:layout_width="352dp"
+                    android:layout_height="150dp"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:visibility="gone"
+                    >
+
+                    <RatingBar
+                        android:id="@+id/ratingBarIst"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="5"
+                        android:theme="@style/RatingBar" />
+
+                    <Button
+                        android:id="@+id/buttonAddRate"
+                        android:layout_width="60dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="3dp"
+                        android:layout_marginLeft="10dp"
+                        android:text="ok!" />
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-</RelativeLayout>
+
+    </RelativeLayout>
 </FrameLayout>
