--- a/MainApp/app/src/main/res/layout/fragment_sign_up_customer.xml
+++ b/MainApp/app/src/main/res/layout/fragment_sign_up_customer.xml
@@ -36,6 +36,14 @@
                 android:inputType="textPersonName"
                 android:hint="Nome" />
             <EditText
+                android:id="@+id/editTextTextPersonSurname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="12"
+                android:textSize="20sp"
+                android:inputType="textPersonName"
+                android:hint="Cognome" />
+            <EditText
                 android:id="@+id/editTextTextEmailAddress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
